Updates on project for deployment 1